# OpenTDCRContactModel

./: .gitignore  README.md  environment.yml  example.py  main.py  node_definition.py  obstacle_definition.py  taskspace.py  workspace_3CPP.pickle
sample_paths/: 15_sample_path.csv  1traced_path.pickle  20_sample_path.csv  2traced_path.pickle  33_sample_path.csv  3_sample_path.csv  3traced_path.pickle  4traced_path.pickle  53_sample_path.csv  5traced_path.pickle  67_sample_path.csv  89_sample_path.csv  new.csv  topright.csv
src/: node_definition.py  sample_robot.py
utils/: helpers.py  mod_cr.py  node_definition.py  obstacle_definition.py  taskspace.py  visualizeSuperEllipse.py
utils_model/: model_definition.py  obstacleFunc.m  pccaSolver.m  positionCalc.m  trans_mat1.m
utils_model/cpp/: .gitignore  CMakeLists.txt  Findnlopt.cmake  README.md  model_utils.cpp  model_utils.h  pcca.cpp  pcca.h  pcca_solver.h  pcca_solver_nlopt.cpp  pcca_solver_nlopt.h  pcca_solver_pybind.cpp  pcca_solver_pytensor.cpp  pcca_solver_pytensor.h
workspaces/: basicWorkspace.pickle  workspace_3.pickle
